--- a/toko-management/vercel.json
+++ b/toko-management/vercel.json
@@ -11,9 +11,23 @@
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
+      "src": "/assets/(.*)\\.js$",
       "headers": {
         "Content-Type": "application/javascript"
+      },
+      "continue": true
+    },
+    {
+      "src": "/assets/(.*)\\.css$",
+      "headers": {
+        "Content-Type": "text/css"
+      },
+      "continue": true
+    },
+    {
+      "src": "/assets/(.*)",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
       },
       "continue": true
     },
