Update Render configuration with multi-line commands

--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,12 @@ services:
   - type: web
     name: pos9-backend
     env: node
-    rootDir: backend
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && npm start
+    buildCommand: |
+      cd backend
+      npm install
+    startCommand: |
+      cd backend
+      node server.js
     envVars:
       - key: MONGODB_URI
         sync: false
